--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,10 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+// Expresso tests
+testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -17,6 +21,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+packagingOptions {
+    exclude 'META-INF/maven/com.google.guava/guava/pom.xml'
+    exclude 'META-INF/maven/com.google.guava/guava/pom.properties'
+}
+
 }
 
 dependencies {
@@ -28,4 +38,18 @@ dependencies {
     compile 'com.android.support:design:23.2.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.android.support:cardview-v7:23.2.0'
+
+
+    // Espresso tests
+    // App's dependencies, including test
+    androidTestCompile 'com.android.support:support-annotations:23.2.0'
+    //// Testing-only dependencies
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.0') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    }
+
 }
